Testing pages content

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <span class="text-black font-bold"><a href="Files/Pranshu-Goyal-Resume-MLE.pdf">Resume</a></span><span class="text-black"></span>
     </div>
     <div>
-      <span class="text-black font-bold"><a href="https://vibhor18.github.io/">Pranshu Goyal</a></span><span class="text-black"></span>
+      <span class="text-black font-bold"><a href="https://pranshu267.github.io/">Pranshu Goyal</a></span><span class="text-black"></span>
     </div>
     <button id="dark-mode-toggle" class="ml-4 p-2  text-black rounded shadow-md">☀️</button>
   </nav>
@@ -218,7 +218,7 @@
       strikethrough: true,
       tables: true,
     });
-    const baseUrl = "https://api.github.com/repos/vibhor18/vibhor18.github.io/contents/";
+    const baseUrl = "https://api.github.com/repos/pranshu267/pranshu267.github.io/contents/";
     const folders = ['posts', 'projects', 'linkedin', 'experience'];
 
     async function fetchMarkdownFiles(folder) {
@@ -443,7 +443,7 @@ footer.appendChild(footerContent);
 
 const copyright = document.createElement("div");
 copyright.className = "hidden md:flex";
-copyright.innerHTML = '&nbsp;&nbsp;&copy; ' + (new Date().getFullYear()) + ' Vibhor Mechu';
+copyright.innerHTML = '&nbsp;&nbsp;&copy; ' + (new Date().getFullYear()) + ' Pranshu Goyal';
 footerContent.appendChild(copyright);
 
 const madeWith = document.createElement("div");
