--- a/pages/experience.html
+++ b/pages/experience.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.3/dist/tailwind.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" crossorigin="anonymous">
-  <link rel="icon" type="image/png" href="https://avatars.githubusercontent.com/vibhor18">
+  <link rel="icon" type="image/png" href="https://avatars.githubusercontent.com/pranshu267">
   <title>Vibhor Mechu</title>
   <style>
 .markdown-container img {
@@ -68,10 +68,10 @@
   <div id="particles-js"></div>
 <nav class="p-4 flex flex-wrap items-center justify-between w-full px-2 md:px-4">
     <div>
-      <span class="text-black font-bold"><a href="Vibhor-Mechu_resume.pdf">Resume</a></span><span class="text-black"></span>
+      <span class="text-black font-bold"><a href="Files/Pranshu-Goyal-Resume-MLE.pdf">Resume</a></span><span class="text-black"></span>
     </div>
     <div>
-      <span class="text-black font-bold"><a href="https://vibhor18.github.io/">Vibhor Mechu</a></span><span class="text-black"></span>
+      <span class="text-black font-bold"><a href="https://pranshu267.github.io/">Pranshu Goyal</a></span><span class="text-black"></span>
     </div>
     <button id="dark-mode-toggle" class="ml-4 p-2  text-black rounded shadow-md">☀️</button>
   </nav>
