--- a/pages/experience1.html
+++ b/pages/experience1.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.3/dist/tailwind.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" crossorigin="anonymous">
-  <link rel="icon" type="image/png" href="https://avatars.githubusercontent.com/vibhor18">
-  <title>Vibhor Mechu</title>
+  <link rel="icon" type="image/png" href="https://avatars.githubusercontent.com/pranshu267">
+  <title>Pranshu Goyal</title>
   <style>
     .markdown-container img {
       display: block;
@@ -104,7 +104,7 @@
       strikethrough: true,
       tables: true,
     });
-    const baseUrl = "https://api.github.com/repos/vibhor18/vibhor18.github.io/contents/experience-detail/";
+    const baseUrl = "https://api.github.com/repos/pranshu267/pranshu267.github.io/contents/experience-detail/";
 
     async function fetchMarkdownFile(fileName) {
       try {
@@ -137,7 +137,7 @@
     }
 
     // Specify the exact file you want to fetch
-    fetchMarkdownFile('ecega.md');
+    fetchMarkdownFile('paytm.md');
   </script>
   <script>
     particlesJS('particles-js', {
