--- a/pages/experience1.html
+++ b/pages/experience1.html
@@ -68,10 +68,10 @@
   <div id="particles-js"></div>
   <nav class="p-4 flex flex-wrap items-center justify-between w-full px-2 md:px-4">
     <div>
-      <span class="text-black font-bold"><a href="Vibhor-Mechu_resume.pdf">Resume</a></span><span class="text-black"></span>
+      <span class="text-black font-bold"><a href="Files/Pranshu-Goyal-Resume-MLE.pdf">Resume</a></span><span class="text-black"></span>
     </div>
     <div>
-      <span class="text-black font-bold"><a href="https://vibhor18.github.io/">Vibhor Mechu</a></span><span class="text-black"></span>
+      <span class="text-black font-bold"><a href="https://pranshu267.github.io/">Pranshu Goyal</a></span><span class="text-black"></span>
     </div>
     <button id="dark-mode-toggle" class="ml-4 p-2  text-black rounded shadow-md">☀️</button>
   </nav>
@@ -137,7 +137,7 @@
     }
 
     // Specify the exact file you want to fetch
-    fetchMarkdownFile('paytm.md');
+    fetchMarkdownFile('onactuate.md');
   </script>
   <script>
     particlesJS('particles-js', {
@@ -261,7 +261,7 @@
 
     const copyright = document.createElement("div");
     copyright.className = "hidden md:flex";
-    copyright.innerHTML = '&nbsp;&nbsp;&copy; ' + (new Date().getFullYear()) + ' Vibhor Mechu';
+    copyright.innerHTML = '&nbsp;&nbsp;&copy; ' + (new Date().getFullYear()) + ' Pranshu';
     footerContent.appendChild(copyright);
 
     const madeWith = document.createElement("div");
