--- a/pages/experience2.html
+++ b/pages/experience2.html
@@ -68,7 +68,7 @@
   <div id="particles-js"></div>
   <nav class="p-4 flex flex-wrap items-center justify-between w-full px-2 md:px-4">
     <div>
-      <span class="text-black font-bold"><a href="Vibhor-Mechu_resume.pdf">Resume</a></span><span class="text-black"></span>
+      <span class="text-black font-bold"><a href="Files/Pranshu-Goyal-Resume-MLE.pdf">Resume</a></span><span class="text-black"></span>
     </div>
     <div>
       <span class="text-black font-bold"><a href="https://pranshu267.github.io/">Pranshu Goyal</a></span><span class="text-black"></span>
@@ -135,7 +135,9 @@
         console.error('Error fetching file:', error);
       }
     }
-    fetchMarkdownFile('onactuate.md');
+
+    // Specify the exact file you want to fetch
+    fetchMarkdownFile('locomex.md');
   </script>
   <script>
     particlesJS('particles-js', {
@@ -259,7 +261,7 @@
 
     const copyright = document.createElement("div");
     copyright.className = "hidden md:flex";
-    copyright.innerHTML = '&nbsp;&nbsp;&copy; ' + (new Date().getFullYear()) + ' Vibhor Mechu';
+    copyright.innerHTML = '&nbsp;&nbsp;&copy; ' + (new Date().getFullYear()) + ' Pranshu';
     footerContent.appendChild(copyright);
 
     const madeWith = document.createElement("div");
