--- a/index.html
+++ b/index.html
@@ -162,16 +162,16 @@
       <h3 class="text-sm italic mb-4">My academic journey</h4>
       <div class="education-container">
         <div class="education-item">
-          <img src="NYU-Logo.png" alt="College Logo 1" />
-          <h3 class="text-xl mt-4 text-white">Master of Science in Computer Science</h3>
-          <p class="text-gray-400">New York University, USA</p>
-          <p class="text-gray-400">2023 - 2025</p>
+          <img src="assets/NYU-Logo.png" alt="College Logo 1" />
+          <h3 class="text-xl mt-4 mb-4">Master of Science in Computer Science</h3>
+          <p class="text-sm mb-4">New York University, USA</p>
+          <p class="text-sm mb-4">2023 - 2025</p>
         </div>
         <div class="education-item">
-          <img src="Manipal_University_Jaipur_logo.png" alt="College Logo 2" />
-          <h3 class="text-xl mt-4 text-white">Bachelor of Technology in Electronics and Communication Engineering</h3>
-          <p class="text-gray-400">Manipal University Jaipur, India</p>
-          <p class="text-gray-400">2018 - 2022</p>
+          <img src="assets/TIET-Logo.png" alt="College Logo 2" />
+          <h3 class="text-xl mt-4 mb-4">Bachelor of Technology in Computer Engineering</h3>
+          <p class="text-sm mb-4">Thapar Institute of Engineering and Technology, India</p>
+          <p class="text-sm mb-4">2018 - 2022</p>
         </div>
       </div>
     </div>
