changes to test dark mode toggle in education section

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
     .dark-mode h1,
     .dark-mode h2,
     .dark-mode h3,
+    .dark-mode p,
     .dark-mode h4,
     .dark-mode .bg-white .card-content,
     .dark-mode .bg-white div {
@@ -170,8 +171,8 @@
         <div class="education-item">
           <img src="assets/TIET-Logo.png" alt="College Logo 2" />
           <h3 class="text-xl mt-4 mb-4">Bachelor of Technology in Computer Engineering</h3>
-          <p class="text-sm mb-4">Thapar Institute of Engineering and Technology, India</p>
-          <p class="text-sm mb-4">2018 - 2022</p>
+          <h4 class="text-sm mb-4">Thapar Institute of Engineering and Technology, India</h4>
+          <h4 class="text-sm mb-4">2018 - 2022</h4>
         </div>
       </div>
     </div>
