changes to test dark mode toggle in education section

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.06);
 }
 
-.education-container h3 {
+/* .education-container h3 {
   font-weight: bold;
   color: #ffffff;
   margin-bottom: 0.5rem;
@@ -64,7 +64,7 @@
 .education-container p {
   color: #d1d1d1;
   margin: 0;
-}
+} */
 
 .contact-container {
   margin-top: 2rem;
