--- a/index.html
+++ b/index.html
@@ -133,8 +133,6 @@
       <div class="flex space-x-4">
         <a href="https://www.linkedin.com/in/pranshu-goyal-436814217/" target="_blank" class="text-xl text-black hover:text-pink-600 transition-colors duration-200 ease-in-out"><i class="fab fa-linkedin"></i></a>
         <a href="https://github.com/pranshu267" target="_blank" class="text-xl text-black hover:text-pink-600 transition-colors duration-200 ease-in-out"><i class="fab fa-github"></i></a>
-        <!-- <a href="https://x.com/mechu_vibhor" target="_blank" class="text-xl text-black hover:text-pink-600 transition-colors duration-200 ease-in-out"><i class="fab fa-x-twitter"></i></a> -->
-        <!-- <a href="https://ctftime.org/user/187602" target="_blank" class="text-xl text-black hover:text-pink-600 transition-colors duration-200 ease-in-out"><i class="fa-flag"></i></a> -->
         <a href="mailto:pg2592@nyu.edu" target="_blank" class="text-xl text-black hover:text-pink-600 transition-colors duration-200 ease-in-out"><i class="fas fa-envelope"></i></a>
       </div>
     </div>
@@ -199,14 +197,14 @@
         toggleBtn.innerText = isDarkModeOn ? "☀️" : "🌓";
       });
     </script>
-    <div id="contact-container" class="section-container w-full md:w-3/3 px-4 py-5 mb-5 md:mb-0">
+    <!-- <div id="contact-container" class="section-container w-full md:w-3/3 px-4 py-5 mb-5 md:mb-0">
       <h1 class="text-2xl font-semibold mb-4"><i class="fa-solid fa-envelope"></i> Contact</h3>
       <h3 class="text-sm italic mb-4">How to reach me</h4>
       <div class="contact-container text-center">
-        <p class="text-xl text-white">Email: <a href="mailto:vm2491@nyu.edu" class="text-pink-600">vm2491@nyu.edu</a></p>
+        <p class="text-xl text-white">Email: <a href="mailto:pg2592@nyu.edu" class="text-pink-600">pg2592@nyu.edu</a></p>
         <p class="text-xl text-white">Location: Brooklyn, New York</p>
       </div>
-    </div>
+    </div> -->
   </div>
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/showdown@1.9.1/dist/showdown.min.js"></script>
@@ -444,7 +442,7 @@ footer.appendChild(footerContent);
 
 const copyright = document.createElement("div");
 copyright.className = "hidden md:flex";
-copyright.innerHTML = '&nbsp;&nbsp;&copy; ' + (new Date().getFullYear()) + ' Pranshu Goyal';
+copyright.innerHTML = '&nbsp;&nbsp;&copy; ' + (new Date().getFullYear()) + 'Pranshu Goyal';
 footerContent.appendChild(copyright);
 
 const madeWith = document.createElement("div");
