--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
         <div class="education-item">
           <img src="assets/NYU-Logo.png" alt="College Logo 1" />
           <h3 class="text-xl mt-4 mb-4">Master of Science in Computer Science</h3>
-          <p class="text-sm mb-4">New York University, USA</p>
-          <p class="text-sm mb-4">2023 - 2025</p>
+          <h4 class="text-sm mb-4">New York University, USA</h4>
+          <h4 class="text-sm mb-4">2023 - 2025</h4>
         </div>
         <div class="education-item">
           <img src="assets/TIET-Logo.png" alt="College Logo 2" />
@@ -174,17 +174,6 @@
         </div>
       </div>
     </div>
-
-
-    
-
-    <!-- <div id="posts-container" class="w-full md:w-1/3 px-4 py-5 mb-5 md:mb-0">
-      <h3 class="text-2xl font-semibold mb-4"><i class="fa-solid fa-magnifying-glass"></i>Skills Learnt</h3>
-      <h4 class="text-sm italic mb-4">A collection of skills I know</h4>
-      <div id="posts-list" class="space-y-4">
-         Fetched Posts Markdown files will be displayed here 
-      </div>
-    </div> -->
 
   </div>
     <script>
@@ -442,7 +431,7 @@ footer.appendChild(footerContent);
 
 const copyright = document.createElement("div");
 copyright.className = "hidden md:flex";
-copyright.innerHTML = '&nbsp;&nbsp;&copy; ' + (new Date().getFullYear()) + 'Pranshu Goyal';
+copyright.innerHTML = '&nbsp;&nbsp;&copy; ' + (new Date().getFullYear()) + ' Pranshu Goyal';
 footerContent.appendChild(copyright);
 
 const madeWith = document.createElement("div");
