--- a/pages/experience4.html
+++ b/pages/experience4.html
@@ -73,6 +73,7 @@
     <div>
       <span class="text-black font-bold"><a href="https://pranshu267.github.io/">Pranshu Goyal</a></span><span class="text-black"></span>
     </div>
+    <!-- Dark mode toggle button -->
     <button id="dark-mode-toggle" class="ml-4 p-2  text-black rounded shadow-md">☀️</button>
   </nav>
   <div class="flex flex-col items-center justify-center" style="min-height: 33vh;">
@@ -139,6 +140,19 @@
     // Specify the exact file you want to fetch
     fetchMarkdownFile('paytm.md');
   </script>
+  
+  <!-- Dark mode toggle script -->
+  <script>
+    document.getElementById("dark-mode-toggle").addEventListener("click", () => {
+      document.body.classList.toggle("dark-mode");
+
+      const toggleBtn = document.getElementById("dark-mode-toggle");
+      const isDarkModeOn = document.body.classList.contains("dark-mode");
+
+      toggleBtn.innerText = isDarkModeOn ? "☀️" : "🌓";
+    });
+  </script>
+
   <script>
     particlesJS('particles-js', {
       particles: {
