--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
 
   </div>
   <script>
+    // Function to apply dark mode based on the saved state
     function applyDarkMode() {
       const isDarkMode = localStorage.getItem('dark-mode') === 'true';
       if (isDarkMode) {
@@ -187,9 +188,11 @@
         document.getElementById("dark-mode-toggle").innerText = "🌓";
       }
     }
-
+  
+    // Apply dark mode on page load
     applyDarkMode();
-
+  
+    // Add event listener to toggle dark mode and save the state in localStorage
     document.getElementById("dark-mode-toggle").addEventListener("click", () => {
       document.body.classList.toggle("dark-mode");
       const isDarkModeOn = document.body.classList.contains("dark-mode");
@@ -197,7 +200,8 @@
       document.getElementById("dark-mode-toggle").innerText = isDarkModeOn ? "☀️" : "🌓";
     });
   </script>
-    <script>
+  
+    <!-- <script>
       document.getElementById("dark-mode-toggle").addEventListener("click", () => {
         document.body.classList.toggle("dark-mode");
   
@@ -206,7 +210,7 @@
   
         toggleBtn.innerText = isDarkModeOn ? "☀️" : "🌓";
       });
-    </script>
+    </script> -->
     <!-- <div id="contact-container" class="section-container w-full md:w-3/3 px-4 py-5 mb-5 md:mb-0">
       <h1 class="text-2xl font-semibold mb-4"><i class="fa-solid fa-envelope"></i> Contact</h3>
       <h3 class="text-sm italic mb-4">How to reach me</h4>
