--- a/pages/experience1.html
+++ b/pages/experience1.html
@@ -95,27 +95,6 @@
     </div>
     <div id="experience-detail-container" class="w-full md:w-2/3 px-4 py-5 mb-5 md:mb-0"></div>
   </div>
-  <script>
-    function applyDarkMode() {
-      const isDarkMode = localStorage.getItem('dark-mode') === 'true';
-      if (isDarkMode) {
-        document.body.classList.add('dark-mode');
-        document.getElementById("dark-mode-toggle").innerText = "☀️";
-      } else {
-        document.body.classList.remove('dark-mode');
-        document.getElementById("dark-mode-toggle").innerText = "🌓";
-      }
-    }
-
-    applyDarkMode();
-
-    document.getElementById("dark-mode-toggle").addEventListener("click", () => {
-      document.body.classList.toggle("dark-mode");
-      const isDarkModeOn = document.body.classList.contains("dark-mode");
-      localStorage.setItem('dark-mode', isDarkModeOn);
-      document.getElementById("dark-mode-toggle").innerText = isDarkModeOn ? "☀️" : "🌓";
-    });
-  </script>
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/showdown@1.9.1/dist/showdown.min.js"></script>
   <script>
@@ -160,9 +139,33 @@
     // Specify the exact file you want to fetch
     fetchMarkdownFile('onactuate.md');
   </script>
+  <script>
+    // Function to apply dark mode based on the saved state
+    function applyDarkMode() {
+      const isDarkMode = localStorage.getItem('dark-mode') === 'true';
+      if (isDarkMode) {
+        document.body.classList.add('dark-mode');
+        document.getElementById("dark-mode-toggle").innerText = "☀️";
+      } else {
+        document.body.classList.remove('dark-mode');
+        document.getElementById("dark-mode-toggle").innerText = "🌓";
+      }
+    }
+  
+    // Apply dark mode on page load
+    applyDarkMode();
+  
+    // Add event listener to toggle dark mode and save the state in localStorage
+    document.getElementById("dark-mode-toggle").addEventListener("click", () => {
+      document.body.classList.toggle("dark-mode");
+      const isDarkModeOn = document.body.classList.contains("dark-mode");
+      localStorage.setItem('dark-mode', isDarkModeOn);
+      document.getElementById("dark-mode-toggle").innerText = isDarkModeOn ? "☀️" : "🌓";
+    });
+  </script>
   
   <!-- Dark mode toggle script -->
-  <script>
+  <!-- <script>
     document.getElementById("dark-mode-toggle").addEventListener("click", () => {
       document.body.classList.toggle("dark-mode");
 
@@ -171,7 +174,7 @@
 
       toggleBtn.innerText = isDarkModeOn ? "☀️" : "🌓";
     });
-  </script>
+  </script> -->
 
   <script>
     particlesJS('particles-js', {
