--- a/pages/experience3.html
+++ b/pages/experience3.html
@@ -141,15 +141,28 @@
     fetchMarkdownFile('ion.md');
   </script>
   
-  <!-- Dark mode toggle script -->
   <script>
+    // Function to apply dark mode based on the saved state
+    function applyDarkMode() {
+      const isDarkMode = localStorage.getItem('dark-mode') === 'true';
+      if (isDarkMode) {
+        document.body.classList.add('dark-mode');
+        document.getElementById("dark-mode-toggle").innerText = "☀️";
+      } else {
+        document.body.classList.remove('dark-mode');
+        document.getElementById("dark-mode-toggle").innerText = "🌓";
+      }
+    }
+  
+    // Apply dark mode on page load
+    applyDarkMode();
+  
+    // Add event listener to toggle dark mode and save the state in localStorage
     document.getElementById("dark-mode-toggle").addEventListener("click", () => {
       document.body.classList.toggle("dark-mode");
-
-      const toggleBtn = document.getElementById("dark-mode-toggle");
       const isDarkModeOn = document.body.classList.contains("dark-mode");
-
-      toggleBtn.innerText = isDarkModeOn ? "☀️" : "🌓";
+      localStorage.setItem('dark-mode', isDarkModeOn);
+      document.getElementById("dark-mode-toggle").innerText = isDarkModeOn ? "☀️" : "🌓";
     });
   </script>
 
