Adding About section

--- a/index.html
+++ b/index.html
@@ -78,8 +78,6 @@
   margin-bottom: 3.5rem; /* Adjust this value as needed for the desired spacing */
 }
 
-
-
   </style>
 </head>
 <body class="dark-mode relative" style="padding: 1rem;">
@@ -138,6 +136,84 @@
     </div>
   </div>
   <div id="content-container" class="flex flex-col md:flex-row w-full flex-wrap mt-6 mb-20 mx-1 md:mx-0">
+  
+   <!-- About Me Section -->
+<div id="about-me-container" class="section-container w-full md:w-3/3 px-4 py-5 mb-5 md:mb-0">
+  <h1 class="text-2xl font-semibold mb-4"><i class="fa-solid fa-user"></i> About Me</h1>
+  <div class="about-me-content flex flex-col md:flex-row items-center">
+    <!-- Your Picture -->
+    <div class="about-me-picture md:w-1/3 w-full flex justify-center mb-4 md:mb-0">
+      <img src="assets/profile.png" alt="Your Name" class="square-photo shadow-md" style="width: 300px; height: 400px;">
+    </div>
+    <!-- About Me Text and Badges -->
+    <div class="about-me-text md:w-2/3 w-full text-center md:text-left">
+      <p class="mb-4">
+        I'm Pranshu Goyal, a Master's student in Computer Science at New York University, where I am specializing in Machine Learning. I completed my B.E. in Computer Engineering at the Thapar Institute of Engineering and Technology in India. 
+        Professionally, I've worked as a Software Engineer at ION Trading, enhancing Fixed Income trading systems for leading banks like UBS, Scotia, Mitsubishi, Pierpont, and TD Bank. 
+        I also interned as a Machine Learning Engineer at Paytm, working on facial liveness detection for e-KYC, and as a Data Analyst at OnActuate, where I created PowerBI dashboards to aid in data-driven decision-making. 
+        Currently, I am working as a Machine Learning and Data Science Intern at LOCOMeX.
+      </p>
+      <p>
+        I'm particularly passionate about AI and actively exploring the latest technologies, including generative AI with a focus on Large Language Models (LLMs) and Multi-Modal machine learning, through various projects. 
+        These endeavors are helping me push the boundaries of innovation in Machine Learning and stay at the forefront of this rapidly evolving field.
+      </p>
+      <h2 class="text-xl mt-4 mb-4">TECHNICAL SKILLS</h2>
+      <!-- Badges Section -->
+      <div class="badges mt-4">
+        <p class="flex flex-wrap justify-start">
+          <!-- Machine Learning and AI Badges -->
+          <img src="https://img.shields.io/badge/PyTorch-%23EE4C2C.svg?style=for-the-badge&logo=PyTorch&logoColor=white" alt="PyTorch" class="badge"/>
+          <img src="https://img.shields.io/badge/TensorFlow-%23FF6F00.svg?style=for-the-badge&logo=TensorFlow&logoColor=white" alt="TensorFlow" class="badge"/>
+          <img src="https://img.shields.io/badge/LangChain-%2300A1E4.svg?style=for-the-badge&logo=LangChain&logoColor=white" alt="LangChain" class="badge"/>
+          <img src="https://img.shields.io/badge/HuggingFace-%23FFD700.svg?style=for-the-badge&logo=HuggingFace&logoColor=white" alt="Hugging Face" class="badge"/>
+          <img src="https://img.shields.io/badge/Optuna-%23E74C3C.svg?style=for-the-badge&logo=Optuna&logoColor=white" alt="Optuna" class="badge"/>
+          <img src="https://img.shields.io/badge/Pandas-%23150458.svg?style=for-the-badge&logo=Pandas&logoColor=white" alt="Pandas" class="badge"/>
+          <img src="https://img.shields.io/badge/Scikit--learn-%23F7931E.svg?style=for-the-badge&logo=scikit-learn&logoColor=white" alt="Scikit-learn" class="badge"/>
+          <img src="https://img.shields.io/badge/NLTK-%231D4159.svg?style=for-the-badge&logo=NLTK&logoColor=white" alt="NLTK" class="badge"/>
+          <img src="https://img.shields.io/badge/CUDA-%230076BA.svg?style=for-the-badge&logo=CUDA&logoColor=white" alt="CUDA" class="badge"/>
+          <img src="https://img.shields.io/badge/OpenAI-%234EA94B.svg?style=for-the-badge&logo=OpenAI&logoColor=white" alt="OpenAI" class="badge"/>
+
+          <img src="https://img.shields.io/badge/Apache%20Spark-%23E25A1C.svg?style=for-the-badge&logo=apachespark&logoColor=white" alt="Apache Spark" class="badge"/>
+          <img src="https://img.shields.io/badge/Vector%20Database-%2300A3E0.svg?style=for-the-badge&logo=VectorDatabase&logoColor=white" alt="Vector Database" class="badge"/>
+          <img src="https://img.shields.io/badge/Grafana-%23F46800.svg?style=for-the-badge&logo=Grafana&logoColor=white" alt="Grafana" class="badge"/>
+          <img src="https://img.shields.io/badge/MongoDB-%2347A248.svg?style=for-the-badge&logo=MongoDB&logoColor=white" alt="MongoDB" class="badge"/>
+          <img src="https://img.shields.io/badge/Apache%20Kafka-%2302313D.svg?style=for-the-badge&logo=apachekafka&logoColor=white" alt="Apache Kafka" class="badge"/>
+          <img src="https://img.shields.io/badge/Power%20BI-%23F2C811.svg?style=for-the-badge&logo=powerbi&logoColor=black" alt="Power BI" class="badge"/>
+          <img src="https://img.shields.io/badge/Hadoop-%2341A41D.svg?style=for-the-badge&logo=ApacheHadoop&logoColor=white" alt="Hadoop" class="badge"/>
+          <img src="https://img.shields.io/badge/Dask-%23FF6C37.svg?style=for-the-badge&logo=Dask&logoColor=white" alt="Dask" class="badge"/>
+          <img src="https://img.shields.io/badge/Tableau-%23E97627.svg?style=for-the-badge&logo=Tableau&logoColor=white" alt="Tableau" class="badge"/>
+          <img src="https://img.shields.io/badge/Apache%20Airflow-%23017CEE.svg?style=for-the-badge&logo=apacheairflow&logoColor=white" alt="Apache Airflow" class="badge"/>
+
+          <img src="https://img.shields.io/badge/C-%2300599C.svg?style=for-the-badge&logo=c&logoColor=white" alt="C" class="badge"/>
+          <img src="https://img.shields.io/badge/C++-%2300599C.svg?style=for-the-badge&logo=cpp&logoColor=white" alt="C++" class="badge"/>
+          <img src="https://img.shields.io/badge/Java-%23007396.svg?style=for-the-badge&logo=Java&logoColor=white" alt="Java" class="badge"/>
+          <img src="https://img.shields.io/badge/Python-%233776AB.svg?style=for-the-badge&logo=python&logoColor=white" alt="Python" class="badge"/>
+          <img src="https://img.shields.io/badge/R-%23276DC3.svg?style=for-the-badge&logo=r&logoColor=white" alt="R" class="badge"/>
+          <img src="https://img.shields.io/badge/SQL-%234477BB.svg?style=for-the-badge&logo=postgresql&logoColor=white" alt="SQL" class="badge"/>
+          <img src="https://img.shields.io/badge/HTML5-%23E34F26.svg?style=for-the-badge&logo=html5&logoColor=white" alt="HTML5" class="badge"/>
+          <img src="https://img.shields.io/badge/Angular-%23DD0031.svg?style=for-the-badge&logo=angular&logoColor=white" alt="Angular" class="badge"/>
+          <img src="https://img.shields.io/badge/Flask-%23000.svg?style=for-the-badge&logo=flask&logoColor=white" alt="Flask" class="badge"/>
+          <img src="https://img.shields.io/badge/Streamlit-%23FF4B4B.svg?style=for-the-badge&logo=streamlit&logoColor=white" alt="Streamlit" class="badge"/>
+          <img src="https://img.shields.io/badge/OpenCV-%235C3EE8.svg?style=for-the-badge&logo=opencv&logoColor=white" alt="OpenCV" class="badge"/>
+
+          <img src="https://img.shields.io/badge/AWS-%23232F3E.svg?style=for-the-badge&logo=amazonaws&logoColor=white" alt="AWS" class="badge"/>
+          <img src="https://img.shields.io/badge/SageMaker-%2315C0D7.svg?style=for-the-badge&logo=sagemaker&logoColor=white" alt="SageMaker" class="badge"/>
+          <img src="https://img.shields.io/badge/Docker-%232496ED.svg?style=for-the-badge&logo=docker&logoColor=white" alt="Docker" class="badge"/>
+          <img src="https://img.shields.io/badge/Kubernetes-%23326CE5.svg?style=for-the-badge&logo=kubernetes&logoColor=white" alt="Kubernetes" class="badge"/>
+          <img src="https://img.shields.io/badge/Jenkins-%23D33833.svg?style=for-the-badge&logo=jenkins&logoColor=white" alt="Jenkins" class="badge"/>
+          <img src="https://img.shields.io/badge/GitHub%20Actions-%232088FF.svg?style=for-the-badge&logo=githubactions&logoColor=white" alt="GitHub Actions" class="badge"/>
+          <img src="https://img.shields.io/badge/EC2-%23232F3E.svg?style=for-the-badge&logo=amazonec2&logoColor=white" alt="EC2" class="badge"/>
+          <img src="https://img.shields.io/badge/GCP-%234285F4.svg?style=for-the-badge&logo=googlecloud&logoColor=white" alt="GCP" class="badge"/>
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
 
     <div id="experience-container" class="section-container w-full md:w-3/3 px-4 py-5 mb-5 md:mb-0">
       <h1 class="text-2xl font-semibold mb-4"><i class="fa-solid fa-briefcase"></i> Experience</h3>
@@ -200,25 +276,6 @@
       document.getElementById("dark-mode-toggle").innerText = isDarkModeOn ? "☀️" : "🌓";
     });
   </script>
-  
-    <!-- <script>
-      document.getElementById("dark-mode-toggle").addEventListener("click", () => {
-        document.body.classList.toggle("dark-mode");
-  
-        const toggleBtn = document.getElementById("dark-mode-toggle");
-        const isDarkModeOn = document.body.classList.contains("dark-mode");
-  
-        toggleBtn.innerText = isDarkModeOn ? "☀️" : "🌓";
-      });
-    </script> -->
-    <!-- <div id="contact-container" class="section-container w-full md:w-3/3 px-4 py-5 mb-5 md:mb-0">
-      <h1 class="text-2xl font-semibold mb-4"><i class="fa-solid fa-envelope"></i> Contact</h3>
-      <h3 class="text-sm italic mb-4">How to reach me</h4>
-      <div class="contact-container text-center">
-        <p class="text-xl text-white">Email: <a href="mailto:pg2592@nyu.edu" class="text-pink-600">pg2592@nyu.edu</a></p>
-        <p class="text-xl text-white">Location: Brooklyn, New York</p>
-      </div>
-    </div> -->
   </div>
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/showdown@1.9.1/dist/showdown.min.js"></script>
