--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
       <!-- About Me Section -->
 <div id="about-me-container" class="section-container w-full md:w-3/3 px-4 py-5 mb-5 md:mb-0">
   <h1 class="text-2xl font-semibold mb-4"><i class="fa-solid fa-user"></i> About Me</h1>
+  <h3 class="text-sm italic mb-4">Hey there, Welcome to my corner of the internet!</h4>
   <div class="about-me-content flex flex-col md:flex-row items-center">
     <!-- Your Picture -->
     <div class="about-me-picture md:w-1/3 w-full flex justify-center mb-4 md:mb-0">
@@ -237,14 +238,34 @@
         <div class="education-item">
           <img src="assets/NYU-Logo.png" alt="College Logo 1" />
           <h3 class="text-xl mt-4 mb-4">Master of Science in Computer Science</h3>
-          <h4 class="text-sm mb-4">New York University, USA</h4>
+          <h4 class="text-sm mb-4">New York University</h4>
           <h4 class="text-sm mb-4">2023 - 2025</h4>
+          <h4 class="text-sm mt-4 mb-4">Courses</h4>
+          <h4 class="text-sm mb-4">Machine Learning</h4>
+          <h4 class="text-sm mb-4">Deep Learning</h4>
+          <h4 class="text-sm mb-4">Natural Language Understanding</h4>
+          <h4 class="text-sm mb-4">Data Science</h4>
+          <h4 class="text-sm mb-4">Big Data</h4>
+          <h4 class="text-sm mb-4">Artificial Intelligence</h4>
+          <h4 class="text-sm mb-4">Design and Ananlysis of Algorithms</h4>
+          <h4 class="text-sm mb-4">Software Engineering</h4>
+          <h4 class="text-sm mb-4">Programming Languages</h4>
         </div>
         <div class="education-item">
           <img src="assets/TIET-Logo.png" alt="College Logo 2" />
           <h3 class="text-xl mt-4 mb-4">Bachelor of Technology in Computer Engineering</h3>
-          <h4 class="text-sm mb-4">Thapar Institute of Engineering and Technology, India</h4>
+          <h4 class="text-sm mb-4">Thapar Institute of Engineering and Technology</h4>
           <h4 class="text-sm mb-4">2018 - 2022</h4>
+          <h4 class="text-sm mt-4 mb-4">Relevant Courses</h4>
+          <h4 class="text-sm mb-4">Numerical Analysis</h4>
+          <h4 class="text-sm mb-4">Optimization Techniques</h4>
+          <h4 class="text-sm mb-4">Predictive Ananlytics using Statistics</h4>
+          <h4 class="text-sm mb-4">Probability and Statistics</h4>
+          <h4 class="text-sm mb-4">Discrete Mathematical Structures</h4>
+          <h4 class="text-sm mb-4">AI Applications - CV, NLP</h4>
+          <h4 class="text-sm mb-4">Database Management Systems</h4>
+          <h4 class="text-sm mb-4">Operating Systems</h4>
+          <h4 class="text-sm mb-4">Object Oriented Programming</h4>
         </div>
       </div>
     </div>
