--- a/index.html
+++ b/index.html
@@ -70,6 +70,20 @@
             margin-bottom: 3.5rem;
             /* Adjust this value as needed for the desired spacing */
         }
+
+        .title-container {
+            height: 3.5rem; /* Adjust this height based on the tallest title */
+            display: flex;
+            align-items: center;
+        }
+
+  /* Consistent image size and alignment */
+        .project-image {
+            width: 300px;
+            height: 200px;
+            object-fit: contain;
+            margin-top: 10px; /* Space between the title and the image */
+        }
     </style>
 </head>
 
@@ -397,12 +411,15 @@
 
                     // Add images for the "projects" folder only
                     const projectCard = `
-            <div class="markdown-container bg-white p-4 rounded shadow-md transition-colors duration-200 hover:bg-gray-100 w-200 h-auto overflow-auto flex-none mx-2 my-2">
-              <img src="assets/projects/${file.name.replace('.md', '.png')}" alt="${title}" class="mb-4"/>
-              <h2 class="text-xl font-semibold mb-2">${title}</h2>
-              <div>${htmlContentWithoutTitle}</div>
-            </div>
-          `;
+  <div class="markdown-container bg-white p-4 rounded shadow-md transition-colors duration-200 hover:bg-gray-100 w-200 h-auto overflow-auto flex-none mx-2 my-2">
+    <div class="title-container">
+      <h2 class="text-xl font-semibold">${title}</h2>
+    </div>
+    <img src="assets/projects/${file.name.replace('.md', '.png')}" alt="${title}" class="project-image" onerror="console.log('Image not found: assets/${file.name.replace('.md', '.png')}')" />
+    <div class="mt-4">${htmlContentWithoutTitle}</div>
+  </div>
+`;
+
 
                     if (itemCount < maxVisibleItems) {
                         if (folder === 'posts') {
