--- a/index.html
+++ b/index.html
@@ -170,15 +170,11 @@
                 <!-- About Me Text and Badges -->
                 <div class="about-me-text md:w-2/3 w-full text-center md:text-left">
                     <p class="mb-4">
-                        I'm Pranshu Goyal, a Master's student in Computer Science at New York University, where I am
-                        specializing in Machine Learning. I completed my B.E. in Computer Engineering at the Thapar
-                        Institute of Engineering and Technology in India.
-                        Professionally, I've worked as a Software Engineer at ION Trading, enhancing Fixed Income trading
-                        systems for leading banks like UBS, Scotia, Mitsubishi, Pierpont, and TD Bank.
-                        I also interned as a Machine Learning Engineer at Paytm, working on facial liveness detection for
-                        e-KYC, and as a Data Analyst at OnActuate, where I created PowerBI dashboards to aid in
-                        data-driven decision-making.
-                        Currently, I am working as a Machine Learning and Data Science Intern at LOCOMeX.
+                        I'm Pranshu Goyal, a Master's student in Computer Science at New York University, specializing in Machine Learning. 
+                        I completed my B.E. in Computer Engineering at the Thapar Institute of Engineering and Technology in India. 
+                        Professionally, I've worked as a Software Engineer at ION Trading, enhancing Fixed Income trading systems for leading banks like UBS, Scotia, Mitsubishi, Pierpont, and TD Bank. 
+                        I also interned as a Machine Learning Engineer at Paytm, working on facial liveness detection for e-KYC, and as a Data Analyst at OnActuate, where I created PowerBI dashboards to aid in data-driven decision-making. 
+                        Most recently, I completed an internship as a Machine Learning and Data Science Intern at LOCOMeX, where I focused on training and deploying ML models and creating ETL pipelines.
                     </p>
                     <p>
                         I'm particularly passionate about AI and actively exploring the latest technologies, including
