--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                     <h2 class="text-xl mt-4 mb-4">TECHNICAL SKILLS</h2>
                     <!-- Badges Section -->
                     <div class="badges mt-4">
-                        <p class="flex flex-wrap justify-start">
+                        <p class="flex flex-wrap justify-center">
                             <!-- Machine Learning and AI Badges -->
                             <img src="https://img.shields.io/badge/PyTorch-%23EE4C2C.svg?style=for-the-badge&logo=PyTorch&logoColor=white"
                                 alt="PyTorch" class="badge" />
