--- a/index.html
+++ b/index.html
@@ -293,6 +293,54 @@
                 </div>
         </div>
 
+
+        <div id="publications-container" class="section-container w-full md:w-3/3 px-4 py-5 mb-5 md:mb-0">
+            <h1 class="text-2xl font-semibold mb-4"><i class="fa-solid fa-book"></i> Publications</h1>
+            <h3 class="text-sm italic mb-4">Explore my research contributions</h3>
+            <div class="publications-content">
+                <!-- Publication 1 -->
+                <div class="publication-item mb-6">
+                    <h2 class="text-xl font-semibold">Multilevel Deep Learning Model for Fabric Classification and Defect Detection</h2>
+                    <p class="text-md mt-2 mb-2">
+                        Detecting defects in fabrics is challenging due to the numerous variations in fabric types and defects. 
+                        Traditional methods have struggled with low detection rates and accuracy. 
+                        To address this, we implemented multilevel modeling for enhanced performance. 
+                        Our approach compares advanced deep learning models—MobileNetV2, Xception, VGG19, and InceptionV3—evaluating their performance across different fabric types. 
+                        Initially, a Convolutional Neural Network (CNN) classifies the fabric with 97.6% accuracy, followed by defect detection using the optimal model for each fabric type. 
+                        This method significantly improves overall defect detection performance. 
+                        Additionally, K-fold cross-validation ensures the robustness of the proposed model.'
+                    </p>
+                    <p class="text-md mt-2 mb-2">
+                        date: 2023-06-22
+                    </p>
+                    <p class="text-md mt-2 mb-2">
+                        venue: 'Advances in Data-driven Computing and Intelligent Systems, Springer'
+                    </p>
+                    <a href="https://link.springer.com/chapter/10.1007/978-981-99-0981-0_57" target="_blank" class="text-blue-600 hover:text-blue-800 transition-colors duration-200 ease-in-out">
+                        Read the full publication
+                    </a>
+                </div>
+                <!-- Publication 2 -->
+                <div class="publication-item mb-6">
+                    <h2 class="text-xl font-semibold">Ensemble Model for Music Genre Classification</h2>
+                    <p class="text-md mt-2 mb-2">
+                        Music Information Retrieval (MIR) has long been a focus of research, aiming to categorize music into genres based on features like instruments, rhythm, and tempo. Despite significant progress in music genre classification, challenges remain. This work analyzes how the number of genres impacts the accuracy of different machine learning models. 
+                        We introduce a novel approach using an ensemble model that achieves 90.3% accuracy in identifying the genre of a given audio clip, demonstrating substantial advancements in the field.
+                    </p>
+                    <p class="text-md mt-2 mb-2">
+                        date: 2023-06-01
+                    </p>
+                    <p class="text-md mt-2 mb-2">
+                        venue: 'Innovations in Data Analytics, Springer'
+                    </p>                   
+                    <a href="https://link.springer.com/chapter/10.1007/978-981-99-0550-8_32" target="_blank" class="text-blue-600 hover:text-blue-800 transition-colors duration-200 ease-in-out">
+                        Read the full publication
+                    </a>
+                </div>
+            </div>
+        </div>
+        
+
         <div id="education-container" class="section-container w-full md:w-3/3 px-4 py-5 mb-5 md:mb-0">
             <h1 class="text-2xl font-semibold mb-4"><i class="fa-solid fa-graduation-cap"></i> Education</h3>
                 <h3 class="text-sm italic mb-4">My academic journey</h4>
