--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                         <h4 class="text-sm mb-4">Data Science</h4>
                         <h4 class="text-sm mb-4">Big Data</h4>
                         <h4 class="text-sm mb-4">Artificial Intelligence</h4>
-                        <h4 class="text-sm mb-4">Design and Ananlysis of Algorithms</h4>
+                        <h4 class="text-sm mb-4">Design and Analysis of Algorithms</h4>
                         <h4 class="text-sm mb-4">Software Engineering</h4>
                         <h4 class="text-sm mb-4">Programming Languages</h4>
                     </div>
